# block_application

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
block_application/: CMakeLists.txt  block_application.cpp  generic_layer.cpp  generic_layer.h
block_application/assets/shaders/: Renderer2D_Circle.glsl  Renderer2D_Quad.glsl  Renderer3D_Line.glsl  Renderer3D_Mesh.glsl  Renderer3D_Wireframe.glsl
block_engine/: CMakeLists.txt  README.md  bepch.h
block_engine/src/: base.h  bepch.h  block_engine.h  time.h  timestep.h  types.h
block_engine/src/application/: application.cpp  application.h  entry_point.h  uuid.cpp  uuid.h
block_engine/src/assert/: assert.h
block_engine/src/camera/: camera.h  camera_3d.cpp  camera_3d.h  camera_3d_controller.cpp  camera_3d_controller.h  editor_camera.cpp  editor_camera.h  orthographic_camera.cpp  orthographic_camera.h  orthographic_camera_controller.cpp  orthographic_camera_controller.h
block_engine/src/debug/: instrumentor.h
block_engine/src/event/: event.h  key_event.h  mouse_event.h  window_application_event.h
block_engine/src/imgui/: imgui_layer.cpp  imgui_layer.h
block_engine/src/input/: input.cpp  input.h  key_codes.h  mouse_codes.h
block_engine/src/layer/: layer.cpp  layer.h  layer_stack.cpp  layer_stack.h
block_engine/src/log/: belog.cpp  belog.h
block_engine/src/platform/macos/: MacOSInput.cpp
block_engine/src/platform/opengl/: opengl_buffer.cpp  opengl_buffer.h  opengl_context.cpp  opengl_context.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  opengl_vertex_array.h  uniform_buffer.cpp  uniform_buffer.h
block_engine/src/renderer/: buffer.cpp  buffer.h  graphics_context.cpp  graphics_context.h  material.h  mesh.cpp  mesh.h  render_command.cpp  render_command.h  renderer.cpp  renderer.h  renderer_2d.cpp  renderer_2d.h  renderer_3d.cpp  renderer_3d.h  renderer_api.cpp  renderer_api.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  vertex_array.cpp  vertex_array.h
block_engine/src/renderer/UI/: font.cpp  font.h  msdf_data.h
block_engine/src/scene/: components.h  scene_camera.cpp  scene_camera.h
block_engine/src/window/: generic_glfw_window.cpp  generic_glfw_window.h  window.cpp  window.h
